--- a/Causal Inference/README
+++ b/Causal Inference/README
@@ -1,1 +1,5 @@
-TODO
+CS130 Causal Inference
+
+Q1: Fisher Exact Test (permutation-based theory of inference)
+Q2: Genetic Matching
+Q3: Synthetic Controls
